# gale-sensor-app

./: .clangd  .gitignore  CMakeLists.txt  README.md  prj.conf  west.yml
build_qemu/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  compile_commands.json  zephyr_modules.txt  zephyr_settings.txt
build_qemu/Kconfig/: Kconfig.dts  Kconfig.modules  Kconfig.sysbuild.modules
build_qemu/Kconfig/arch/: Kconfig
build_qemu/Kconfig/boards/: Kconfig  Kconfig.defconfig  Kconfig.qemu_riscv32  Kconfig.sysbuild
build_qemu/Kconfig/soc/: Kconfig  Kconfig.defconfig  Kconfig.soc  Kconfig.sysbuild
build_qemu/modules/hal_espressif/: cmake_install.cmake
build_qemu/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dts.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  snippets_generated.cmake  syscall_weakdefs_llext.c  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.stat  zephyr_final.map  zephyr_pre0.elf  zephyr_pre0.map
build_qemu/zephyr/arch/: cmake_install.cmake
build_qemu/zephyr/arch/common/: cmake_install.cmake
build_qemu/zephyr/boards/: cmake_install.cmake
build_qemu/zephyr/boards/shields/: cmake_install.cmake
build_qemu/zephyr/drivers/: cmake_install.cmake
build_qemu/zephyr/kconfig/: sources.txt
build_qemu/zephyr/kernel/: cmake_install.cmake
build_qemu/zephyr/lib/: cmake_install.cmake
build_qemu/zephyr/soc/: cmake_install.cmake
build_qemu/zephyr/subsys/: cmake_install.cmake
src/: main.cpp
(+55 files in other folders)
